dhall/tests/type-errors/unit/MergeEmptyNeedsDirectAnnotation1.txt
Type error: error: MergeEmptyNeedsAnnotation
 --> <current file>:1:13
  |
1 | \(x: <>) -> (merge {=} x) : Bool
  |              ^^^^^^^^^^^ MergeEmptyNeedsAnnotation
  |
